[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://shaders/blackMenus.tres" type="Shader" id=2]
[ext_resource path="res://sprites/titleLogo.jpg" type="Texture" id=3]
[ext_resource path="res://sprites/selection.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.10803
margin_bottom = -1.10803
script = ExtResource( 1 )

[node name="demoTimer" type="Timer" parent="."]

[node name="blackBG" type="Panel" parent="."]
editor/display_folded = true
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="logo" type="TextureRect" parent="blackBG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = -25.0
margin_right = 320.0
margin_bottom = -25.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="gameMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -60.0
margin_right = 121.0
margin_bottom = 164.0
custom_constants/separation = 30
alignment = 1

[node name="easy" type="Label" parent="gameMenu"]
margin_top = 39.0
margin_right = 241.0
margin_bottom = 53.0
hint_tooltip = "Single player on easy mode."
text = "1 Player Game A"
align = 1

[node name="a" type="TextureRect" parent="gameMenu/easy"]
visible = false
margin_right = 241.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="hard" type="Label" parent="gameMenu"]
margin_top = 83.0
margin_right = 241.0
margin_bottom = 97.0
hint_tooltip = "Single player on hard mode."
text = "1 Player Game B"
align = 1

[node name="b" type="TextureRect" parent="gameMenu/hard"]
visible = false
margin_right = 241.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="twoEasy" type="Label" parent="gameMenu"]
editor/display_folded = true
margin_top = 127.0
margin_right = 241.0
margin_bottom = 141.0
hint_tooltip = "Two players on easy mode."
text = "2 Player Game A"
align = 1

[node name="a" type="TextureRect" parent="gameMenu/twoEasy"]
visible = false
margin_right = 241.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="twoHard" type="Label" parent="gameMenu"]
editor/display_folded = true
margin_top = 171.0
margin_right = 241.0
margin_bottom = 185.0
hint_tooltip = "Two players on hard mode."
text = "2 Player Game B"
align = 1
autowrap = true

[node name="b" type="TextureRect" parent="gameMenu/twoHard"]
visible = false
margin_right = 241.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="credits" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_bottom = -7.0
custom_constants/separation = 15

[node name="1983" type="VBoxContainer" parent="credits"]
margin_right = 1280.0
margin_bottom = 14.0

[node name="copyright" type="Label" parent="credits/1983"]
margin_right = 1280.0
margin_bottom = 14.0
text = "1983 Nintendo"
align = 1

[node name="2019" type="VBoxContainer" parent="credits"]
margin_top = 29.0
margin_right = 1280.0
margin_bottom = 43.0

[node name="signature" type="Label" parent="credits/2019"]
margin_right = 1280.0
margin_bottom = 14.0
text = "2019 Carlos Molina"
align = 1

[node name="info" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_bottom = -106.0

[node name="score" type="Label" parent="info"]
margin_right = 1280.0
margin_bottom = 14.0
text = "Hi Score: 000000"
align = 1
[connection signal="timeout" from="demoTimer" to="." method="_on_demoTimer_timeout"]
[connection signal="mouse_entered" from="gameMenu/easy" to="." method="_on_easy_mouse_entered"]
[connection signal="mouse_exited" from="gameMenu/easy" to="." method="_on_easy_mouse_exited"]
